<resources>
    <string name="app_name">Kotlin9</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_personal_area">Personal Area</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_music">Music</string>
    <string name="menu_login">Login</string>
    <string name="menu_registration">Registration</string>
    <string name="menu_edit_personal_area">Edit Personal Area</string>
    <string name="menu_edit_password_personal_area">Edit Password Personal Area</string>
</resources>