<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_personal_area"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_personal_area" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_weather" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_music" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_registration"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_registration" />
    </group>
</menu>